# india-votes-data

./: .gitignore  .impeccable.md  .reloadignore  2024 Parliamentary Elections India.csv  2024AC-HR.json  2024AC-JH.json  2024AC-JK.json  2024AC-MH.csv  2024ACJH.csv  2024ACJH.json  2024ACJK.csv  2024ACMH.csv  2024ACMH.json  2025AC-DL.csv  2025AC-DL.json  AssemblyElections_2024_Jharkhand.csv  AssemblyElections_2024_Jharkhand.json  AssemblyElections_2024_Maharashtra.csv  AssemblyElections_2024_Maharashtra.json  Haryana_20241016_024444.csv  Haryana_20241016_024444.json  Jammu_&_Kashmir_20241016_043402.json  LICENSE  README.md  SCHEMA.md  WARP.md  analyse-this.ipynb  cli.py  config.py  dashboard.py  data_fixer.ipynb  db_utils.py  eci-ResultsDay.py  eci-ResultsDayLiveClient.py  eci-ResultsDayServer.py  eci-live-scraper.py  eci-scraper2-DL.py  eci-scraper2-HR.py  eci-scraper2-JH.py  eci-scraper2-JK.py  (+13 more)
core/: __init__.py  browser.py  models.py  output.py  scraper.py
data/: parties.csv
live_tracker/: README.md  archive_final.sh  dashboard.py  db_utils.py  eci-ResultsDayLiveClient.py  eci-live-scraper.py  pyproject.toml  requirements-live.txt  scheduler.sh  states_may2026.py
results/: 2024AC-HR.csv  2024AC-JK.csv  2024Assembly-HR.csv  2024Assembly-HR.json  2024Assembly-JH.csv  2024Assembly-JH.json  2024Assembly-JK.csv  2024Assembly-JK.json  2024Assembly-MH.csv  2024Assembly-MH.json  2025AC-DL.csv  2025AC-DL.json  2025Assembly-BR.csv  2025Assembly-BR.json  2025Assembly-DL.csv  2025Assembly-DL.json  2026Assembly-AS.csv  2026Assembly-AS.json  2026Assembly-KL.csv  (+7 more)
(+5 files in other folders)
