[project]
name = "india-votes-data"
version = "0.1.0"
description = "ECI election results scraper and analysis tools for Indian election data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "selenium>=4.15.0",
    "pandas>=2.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[dependency-groups]
dev = [
    "black>=23.11.0",
    "pylint>=3.0.0",
]
optional = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]