[project]
name = "eci-live-tracker"
version = "0.1.0"
description = "ECI Live Election Tracker — General Assembly Elections, May 2026"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.18.0",
    "streamlit>=1.32.0",
    "plotly>=5.20.0",
    "pandas>=2.0.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
tracker-scraper = "eci-live-scraper:main"
tracker-dashboard = "dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
